# harbormaster

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  PLATFORM_WAR_STORIES.md  README.md  pyproject.toml
.github/workflows/: iac-ci.yml  serving-ci.yml
bench/: SCORE_BENCH.md  bench_score.py
cdc/: README.md  __init__.py
cdc/connect/: Dockerfile
cdc/connector/: config.py  registration.py
cdc/consumer/: Dockerfile  applier.py  envelope.py  service.py
cdc/fixtures/: connector_config.expected.json  debezium_envelopes.jsonl  expectations.json  loader.py
cdc/monitor/: slot_lag.py
cdc/schema/: ddl.py  tenancy.py
cdc/sinks/: base.py  dynamo.py  iceberg_audit.py  redis_cache.py
cdc/tests/: test_applier.py  test_applier_multipartition.py  test_connector_config.py  test_connector_registration.py  test_ddl.py  test_envelope.py  test_migrate_p39.py  test_service.py  test_sinks.py  test_slot_lag.py  test_tenancy.py
deploy/helm/: README.md
docs/: AB_MASTERCLASS_AUDIT.md  ARCHITECTURE.md  AWS_SETUP.html  AWS_SETUP.md  DATABRICKS_MAP.md  EXPERIENCE_REPORT.md  HONESTY.md  INTERVIEW_DEEPDIVE.md  PLATFORM_BOOK.md  SYSTEM_DESIGN_DECISIONS.md  WAVE3_FINDINGS.md  WRITEUP_PLAN.md  corridor-detector.md  corridor-preprocessing.html  databricks-vs-aws.html  system-design-decisions.html
docs/adr/: 0001-streaming-per-event-realization.md  0002-cdc-staleness-budget.md  0003-single-region-dr-rpo-rto.md  0004-no-consensus-no-sharded-query-router.md  README.md
docs/drills/: ANTIMERIDIAN_PRISM_LOCAL_2026-07-13.md  CDC_connector_registration_local_2026-07-12.md  CDC_connector_status_poll_race_2026-07-12.md  E2E_local_stack.md  FLINK_MMSI_KEY_LOCAL_2026-07-13.md  L1_training_serving_skew.md  L2_canary_rollback.md  L3_drift_classification.md  L4_reward_hacking_probe.md  M_drift_hidden.md  M_tenant_leak.md  M_tenant_leak_p39.md  NEAR_POLE_PRISM_LOCAL_2026-07-13.md  P1_slot_bloat.md  P2_duplicates.md  P39_local_cdc_smoke.md  P39_test_suite.md
docs/phases/: PHASE_1.html  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_4_SKETCH.md  PHASE_5.md
docs/plan-artifacts/: 2026-07-12-wave4-w3-baseline-2.json  2026-07-12-wave4-w3-baseline.json  2026-07-12-wave4-w3-envvar-allowlist-fix.json  2026-07-12-wave4-w3-teardown.json  2026-07-12-wave4-w3-vpce-fix-v2.json  2026-07-12-wave4-w3-vpce-fix.json  README.md
docs/runbooks/: IAM_BOUNDARY_APPLY.md  MERGE_AND_APPLY.md  P39_COMPOSITE_KEY_MIGRATION.md  PHASE_2_AWS_SHOWCASE.md  PHASE_3_AWS_SHOWCASE.md  SPRINT_W1_SHOWCASE.md  W4_OPERATOR_PLAN_2026-07-14.md  WAVE4_LIVE_WINDOWS.md
fde/: README.md  case-study-meridian-bay.md  discovery-brief-coast-guard.md  discovery-brief-marine-insurer.md  discovery-brief-port-authority.md  esri-uc-2023-requirements-memo.md  multi-tenant-client-in-the-loop-design.md  sla-slo-tiers.md  user-research-synthesis.md
infra/aws/: bootstrap.sh  harbormaster-permissions-boundary.json  harbormaster-platform-permissions.json  harbormaster-platform-trust.json
infra/terraform/: .checkov.baseline  versions.tf
lake/: export_training_set.py  iceberg.py  offline_store.py
lake/backfill/: job.py  transforms.py
lake/fixtures/: expectations.json  marinecadastre_sample.jsonl
lake/quality/: marinecadastre_suite.py
lake/tests/: test_backfill_transforms.py  test_export_training_set.py  test_iceberg.py  test_marinecadastre_suite.py
mlops/: calibration_watch.py  canary_actuator.py  concept_proxy.py  disagreement_baseline.py  drift.py  drift_decision.py  holdout_gate.py  manifest.py  preference_builder.py  promote.py  registry.py  reward_hacking_probe.py  shadow_diff.py  tenant_drift.py  wandb_adapter.py
mlops/fixtures/: expectations.json  preference_expectations.json  preference_hitl_rows.json
mlops/pidpm_container/: Dockerfile  server.py
mlops/route_optimizer/: __init__.py  feasibility.py  graph.py  ppo.py  reward.py  rollout.py  service.py  vendored_kl.py
mlops/tests/: test_calibration_watch.py  test_canary_actuator.py  test_concept_proxy.py  test_disagreement_baseline.py  test_drift.py  test_drift_decision.py  test_holdout_gate.py  test_manifest.py  test_preference_builder.py  test_promote.py  test_registry.py  test_reward_hacking_probe.py  test_route_optimizer_feasibility.py  test_route_optimizer_graph.py  test_route_optimizer_kl.py  test_route_optimizer_ppo.py  test_route_optimizer_reward.py  test_route_optimizer_rollout.py  test_route_optimizer_service.py  test_shadow_diff.py  test_tenant_drift.py  test_wandb_adapter.py
scripts/: build_demo_pidpm_checkpoint.py  capture_flink_backpressure.py  cdc_record_fixture.py  cdc_smoke.py  drift_smoke.py  drill_l1_training_serving_skew.py  drill_l2_canary_rollback.py  drill_l3_drift_classification.py  drill_l4_reward_hacking.py  drill_m_drift_hidden.py  drill_m_tenant_leak.py  drill_p1_slot_bloat.py  drill_p2_duplicates.py  export_checkpoint.sh  lake_backfill_smoke.py  lake_quality_smoke.py  lake_training_export_smoke.py  loadtest_kinesis_backpressure.py  migrate_p39.py  observe_phase5_scale.py  package_lake_for_emr.sh  phase5_tenant_smoke.py  plan_artifact.sh  ppo_stretch_smoke.py  preference_smoke.py  render_phase5_serving.py  w1_push_images.sh
serving/: Dockerfile  README.md  env.example
serving/app/: __init__.py  bedrock_explainer.py  burn_rate.py  config.py  cost.py  errors.py  hitl.py  main.py  metrics.py  models.py  orchestrator.py  pidpm_client.py  registry.py  slo.py  slo_tenant.py  watchlist.py
serving/frontend/: README.md  __init__.py  console.py  hitl_client.py  registry_client.py
serving/tests/: _helpers.py  conftest.py  test_bedrock_explainer.py  test_burn_rate.py  test_config_tenant.py  test_corridor.py  test_gap_detector_pidpm.py  test_golden.py  test_heuristic_planner.py  test_hitl.py  test_orchestrator_pidpm_wiring.py  test_pidpm_client.py  test_registry.py  (+10 more)
sessions/: CODEX_HANDOFF_2026-07-11.md  CODEX_HANDOFF_2026-07-12.md  SESSION_HANDOFF_2026-07-03_phase1.md  SESSION_HANDOFF_2026-07-03_phase2.md  SESSION_HANDOFF_2026-07-04_phase3.md  SESSION_HANDOFF_2026-07-04_sprint_closeout.md  SESSION_HANDOFF_2026-07-07_ab_masterclass_audit.md
(+173 files in other folders)
