[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harbormaster"
version = "0.1.0"
description = "Harbormaster serving plane: deterministic AIS anomaly scoring (Phase 1 vertical slice)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "prometheus-client>=0.20",
  "structlog>=24.1",
  "shapely>=2.0",
  "numpy>=1.26",
  "orjson>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.5"]
postgres = ["asyncpg>=0.29"]
ingestor = ["boto3>=1.34", "websocket-client>=1.7"]
console = ["streamlit>=1.30", "pandas>=2.0"]
# The CDC consumer service (cdc/consumer, cdc/sinks). Unit tests need none of
# these (all I/O is injected); the real service and the local kind stack do.
cdc = [
  "confluent-kafka>=2.3",
  "boto3>=1.34",
  "redis>=5",
  "pyiceberg[sql-sqlite]>=0.7",
  "pyarrow>=15",
]
# Phase 3 lake + promotion plane (lake/, mlops/). Unit tests need only these:
# great_expectations (a lightweight PandasDataset, no DataContext/Checkpoint
# project scaffolding), pandas, and scikit-learn (HDBSCAN waypoint clustering).
# pyiceberg/pyarrow are already covered by the cdc extra above (lake/iceberg.py
# reuses the same catalog pattern). RDP simplification is hand-rolled, no
# library. See lake-emr below for the real, EMR-only, not-locally-runnable half.
lake = [
  "great-expectations>=0.18,<1.0",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]
# lake/backfill/job.py only: the real PySpark EMR entrypoint. Needs a JVM this
# dev machine does not have (see docs/phases/PHASE_3.md's no-local-JVM
# finding), so this extra is declared but not installed/exercised here; it is
# what a real EMR Serverless job image or a JVM-equipped dev box would need.
lake-emr = [
  "pyspark>=3.5",
  "boto3>=1.34",
]

# Map the in-repo source dirs onto importable top-level packages so the
# vendored GeoTrace modules keep their `from app.* import ...` paths unchanged
# and the Flink feature funcs import as `features`.
[tool.hatch.build.targets.wheel]
packages = ["serving/app", "streaming/features"]
# don't ship test code into site-packages
exclude = ["**/tests", "**/tests/**", "**/test_*.py"]

[tool.pytest.ini_options]
# "." puts the repo root on sys.path so the cdc package imports as `cdc`.
pythonpath = ["serving", "streaming", "tests", "."]
asyncio_mode = "auto"
testpaths = ["serving/tests", "streaming/features/tests", "streaming/replay/tests", "streaming/ingestor/tests", "streaming/flink/tests", "serving/frontend/tests", "cdc/tests", "lake/tests", "tests/e2e"]
markers = [
  "postgres: integration test that needs a live Postgres (set HM_TEST_PG_DSN to run)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["serving", "streaming", "cdc", "lake", "."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Verbatim-vendored from geotrace-agent; kept byte-identical, not reformatted.
"serving/app/components/space_time_prism.py" = ["E501"]
"serving/app/agents/space_time_reasoner.py" = ["E501"]
"serving/app/agents/rendezvous_finder.py" = ["E501"]
"serving/app/agents/validator.py" = ["E501"]
